--- a/app/views/lessons/new.html.erb
+++ b/app/views/lessons/new.html.erb
@@ -1,5 +1,17 @@
 <%= form_for :lesson, url: lessons_path, html: { method: :post, :class => "form-horizontal"} do |f| %>
-
+        <% if @lesson.errors.any? %>
+        <div class="alert bg-danger">
+            <a href="#" class="close" data-dismiss="alert">&times;</a>
+            The form contains <%= pluralize(@lesson.errors.count, "error") %>.
+            <ul>
+                <% @lesson.errors.full_messages.each do |msg| %>
+                <li>
+                    * <%= msg %>
+                </li>
+                <% end %>
+            </ul>
+        </div>
+        <% end %>
  		<div class="form-group">
         <%= f.label "Nazwa zajęc", :class => "col-sm-2 control-label" %>
         <div class="col-sm-9">
@@ -27,7 +39,7 @@
         <div class="form-group">
         <%= f.label "Sala ID", :class => "col-sm-2 control-label" %>
         <div class="col-sm-9">
-            <%= f.text_field :room_id, class: "form-control" %>
+            <%= f.collection_select(:room_id, Room.all, :id, :name) %>
         </div>
 
          <div class="form-group text-center">
