--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -6,7 +6,8 @@
                 <th>Godzina</th>
                 <th>Dzień</th>
                 <th>Tydzień A/B</th>
-                <th>Sala</th>     
+                <th>Sala</th>  
+                <th>Wolnych miejsc</th>    
             </tr>
         </thead>
         <tbody>
@@ -18,8 +19,23 @@
                     <td><%= lesson.day %></td>
                     <td><%= lesson.week_type %></td>
                     <td><%= lesson.room.name %></td>
-                    <td><%= link_to "Edycja",  edit_lesson_path(lesson.id)  %></td>
-                    <td><%= link_to("Usuń", lesson_path(lesson), :method => :delete) %></td>
+                    <td><%=  (lesson.room.places - lesson.students.count).to_s + "/" + lesson.room.places.to_s%></td>
+
+                    <% if current_user.profile_type == "Emmployee" %>
+                        <td><%= link_to "Edycja",  edit_lesson_path(lesson.id)  %></td>
+                        <td><%= link_to("Usuń", lesson_path(lesson), :method => :delete) %></td>
+                    <% else %>
+
+                        <td> <%= form_for :lesson, url: lessons_path, html: { method: :post, :class => "form-horizontal"} do |f| %>
+                                <%= f.hidden_field :lesson_id, value: lesson.id %>
+                                <%= f.submit "Zapisz", class: "btn btn-primary active btn-lg" %>
+                             <% end %> 
+                         </td>
+                    
+                    <%end%>
+
+
+
                 </tr>
                 <% end %>
         </tbody>
