--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,34 +1,55 @@
-<% if controller_name == 'students' %>
-        <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "Zaloguj", user_session_path %></li>
-        <li><%= link_to "Rejestracja Pracownika", new_employee_path %></li>
-<% elsif controller_name == 'sessions'  %>
-        <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "Rejestracja Użytkownik", new_student_path %></li>
-        <li><%= link_to "Rejestracja Pracownika", new_employee_path %></li>
 
-<% elsif controller_name == 'employees'  %>
-         <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "Zaloguj", user_session_path %></li>
-        <li><%= link_to "Rejestracja Użytkownik", new_student_path %></li>
 
-        <% elsif controller_name == 'main_page'  %>
-        <% unless user_signed_in? %>
-            <li><%= link_to "Home", root_path %></li>
-            <li><%= link_to "Zaloguj", user_session_path %></li>
-            <li><%= link_to "Rejestracja Użytkownik", new_student_path %></li>
-            <li><%= link_to "Rejestracja Pracownika", new_employee_path %></li>
-            <% else %>
-                        <li class="dropdown pull-right">
-                            <a href="#" data-toggle="dropdown" class="dropdown-toggle">Mój profil <b class="caret"></b></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Ustawienia</a></li>
-                                <li class="divider"></li>
-                                <li><%= link_to "Wyloguj", destroy_user_session_path, :method => :delete %></li>
-                            </ul>
-                        </li>
-                    <% end %>
-        <%= csrf_meta_tags %>
+  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <%= link_to "Rezerwacja Sal", root_path, class: "navbar-brand" %>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <% if controller_name == 'students' %>
+                <li><%= link_to "Zaloguj", user_session_path %></li>
+                <li><%= link_to "Rejestracja Pracownika", new_employee_path %></li>
+            <% elsif controller_name == 'sessions'  %>
+                <li><%= link_to "Rejestracja Użytkownik", new_student_path %></li>
+                <li><%= link_to "Rejestracja Pracownika", new_employee_path %></li>
 
-<% end %> 
+            <% elsif controller_name == 'employees'  %>
+                 <li></li>
+                <li><%= link_to "Zaloguj", user_session_path %></li>
+                <li><%= link_to "Rejestracja Użytkownik", new_student_path %></li>
 
+                <% elsif controller_name == 'main_page'  %>
+                <% unless user_signed_in? %>
+                    <li><%= link_to "Zaloguj", user_session_path %></li>
+                    <li><%= link_to "Rejestracja Użytkownik", new_student_path %></li>
+                    <li><%= link_to "Rejestracja Pracownika", new_employee_path %></li>
+                <% else %>
+                    <li class="dropdown pull-right">
+                        <a href="#" data-toggle="dropdown" class="dropdown-toggle">Mój profil <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Ustawienia</a></li>
+                            <li class="divider"></li>
+                            <li><%= link_to "Wyloguj", destroy_user_session_path, :method => :delete %></li>
+                        </ul>
+                    </li>
+                <% end %>
+                <%= csrf_meta_tags %>
+                 <% end %> 
+          </ul>
+          <% if  user_signed_in? %>
+           <p style="display: inline; float: right; margin-top: 15px; color: white" > Zalogowany jako: <%= current_user.email %> </p>
+           <% end %>
+
+        </div><!--/.nav-collapse -->
+
+      </div>
+
+    </div>
+    
