--- a/app/views/lessons/new.html.erb
+++ b/app/views/lessons/new.html.erb
@@ -21,20 +21,21 @@
          <div class="form-group">
         <%= f.label "Godzina rozpoczecia", :class => "col-sm-2 control-label" %>
         <div class="col-sm-9">
-            <%= f.text_field :hour, class: "form-control" %>
+            <%= f.select(:hour, ["8:00","10:00","12:00", "14:00", "16:00", "18:00"], {}, {class: "form-control"} ) %>
         </div>
 
          <div class="form-group">
         <%= f.label "Dzień tygodnia", :class => "col-sm-2 control-label" %>
         <div class="col-sm-9">
-            <%= f.text_field :day, class: "form-control" %>
+            <%= f.select(:day, ["Poniedziałek","Wtorek","Środa", "Czwartek", "Piątek"], {}, {class: "form-control"} ) %>
         </div>
  
  		<div class="form-group">
-        <%= f.label "Tydzień A/B", :class => "col-sm-2 control-label" %>
+        <%= f.label "Wybierz tydzień", :class => "col-sm-2 control-label" %>
         <div class="col-sm-9">
-            <%= f.text_field :week_type, class: "form-control" %>
+           <%= f.select(:week_type, ["A","B","AB"], {}, {class: "form-control"} ) %>
         </div>
+
 
         <div class="form-group">
         <%= f.label "Sala ID", :class => "col-sm-2 control-label" %>
