--- a/app/views/employees/new.html.erb
+++ b/app/views/employees/new.html.erb
@@ -1,38 +1,41 @@
+<%= render 'employees/error_messages' %>
+<div class="container">
+    <div class="login-container">
+            <div id="output" ></div>
+            <div class="form-box">
+            <h3> Rejestracja Pracownika </h3>
+            <%= form_for :employee, url: employees_path, html: { method: :post, :class => "form-horizontal"} do |f| %>
 
-<%= form_for :employee, url: employees_path, html: { method: :post, :class => "form-horizontal"} do |f| %>
-
-    <div class="form-group">
-        <%= f.label "Imię", :class => "col-sm-2 control-label" %>
-        <div class="col-sm-9">
-            <%= f.text_field :name, class: "form-control" %>
+   
+        
+                <%= f.text_field :name, placeholder: "Imię" %>
+           
+       
+            
+                <%= f.text_field :surname, placeholder: "Nazwisko" %>
+            
+        
+            
+                <%= f.text_field :degree, placeholder: "Stopień naukowy"  %>
+          
+        
+        
+            
+                <%= f.text_field :email, placeholder: "Email"  %>
+           
+        
+       
+          
+                <%= f.password_field :password,  placeholder: "Hasło" %>
+           
+                 <hr>
+       
+                <div class="form-group text-center">
+                    <%= f.submit "Zapisz", class: "btn btn-primary active btn-lg" %>
+                </div>
+            <% end %>
         </div>
+    <div class="col-xs-2 col-sm-4" >
     </div>
-    <div class="form-group">
-        <%= f.label "Nazwisko", :class => "col-sm-2 control-label" %>
-        <div class="col-sm-9">
-            <%= f.text_field :surname, class: "form-control" %>
-        </div>
-    </div>
-    <div class="form-group">
-        <%= f.label "stopień naukowy", :class => "col-sm-2 control-label" %>
-        <div class="col-sm-9">
-            <%= f.text_field :degree, class: "form-control" %>
-        </div>
-    </div>
-    <div class="form-group" id="sandbox-container">
-        <%= f.label "email", :class => "col-sm-2 control-label" %>
-        <div class="col-sm-9">
-            <%= f.text_field :email, class: 'form-control' %>
-        </div>
-    </div>
-    <div class="form-group">
-        <%= f.label "password", :class => "col-sm-2 control-label" %>
-        <div class="col-sm-9">
-            <%= f.text_field :password, class: "form-control" %>
-        </div>
-    </div>
-
-    <div class="form-group text-center">
-        <%= f.submit "Zapisz", class: "btn btn-primary active btn-lg" %>
-    </div>
-    <% end %>
+     </div>
+</div>
