Poprawa rejestracji studenta

--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,6 +1,4 @@
 
-
-
 <%= render 'students/error_messages' %>
 <div class="container">
     <div class="login-container">
@@ -19,7 +17,7 @@
             
         
             
-                <%= f.text_field :specialization, placeholder: "Stopień naukowy"  %>
+                <%= f.text_field :specialization, placeholder: "Spezjalizacja"  %>
           
         
         
