Utworzenie wyglądu dla tworzenia nowych oraz edycji zajęć

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -55,7 +55,7 @@
                          </ul>
                       </li>
                       <li><%= link_to "Zajęcia", lessons_path %></li>
-                      <li><%= link_to "Dodaj zajęcia", new_lesson_path %></li>
+                      <li><%= link_to "Dodaj zajęcie", new_lesson_path %></li>
                     <%= csrf_meta_tags %>
               
                   <% end %>
@@ -86,7 +86,7 @@
                          </ul>
                       </li>
                       <li><%= link_to "Zajęcia", lessons_path %></li>
-                      <li><%= link_to "Dodaj zajęcia", new_lesson_path %></li>
+                      <li><%= link_to "Dodaj zajęcie", new_lesson_path %></li>
                     <%= csrf_meta_tags %>
               
                   <% end %>
