--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -26,12 +26,12 @@
                     <td><%=  (lesson.room.places - lesson.students.count).to_s + "/" + lesson.room.places.to_s%></td>
 
                     <% if current_user.profile_type == "Employee" %>
-                        <td><%= link_to "Edycja",  edit_lesson_path(lesson.id)  %></td>
+                        <td><%= link_to "Edycja",  edit_lesson_path(lesson.id), class: "btn btn-success  btn-xs"   %></td>
 
                        
 
                         <td> <%= form_for(lesson, :method => :delete) do |f| %>
-                        <%= f.submit :value => "Delete" %>
+                        <%= f.submit :value => "Delete", class: "btn btn-danger btn-xs"%>
                         <% end %></td>
 
                     <% else %>
