--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <%= link_to "Rezerwacja Sal", root_path, class: "navbar-brand" %>
+          <%= link_to "Rezerwacja Zajęć", root_path, class: "navbar-brand" %>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -37,8 +37,6 @@
                       <li class="dropdown pull-right">
                          <a href="#" data-toggle="dropdown" class="dropdown-toggle">Mój profil <b class="caret"></b></a>
                           <ul class="dropdown-menu">
-                              <li><a href="#">Ustawienia</a></li>
-                              <li class="divider"></li>
                               <li><%= link_to "Wyloguj", destroy_user_session_path, :method => :delete %></li>
                          </ul>
                       </li>
@@ -49,8 +47,6 @@
                  <li class="dropdown pull-right">
                          <a href="#" data-toggle="dropdown" class="dropdown-toggle">Mój profil <b class="caret"></b></a>
                           <ul class="dropdown-menu">
-                              <li><a href="#">Ustawienia</a></li>
-                              <li class="divider"></li>
                               <li><%= link_to "Wyloguj", destroy_user_session_path, :method => :delete %></li>
                          </ul>
                       </li>
@@ -68,8 +64,7 @@
                       <li class="dropdown pull-right">
                          <a href="#" data-toggle="dropdown" class="dropdown-toggle">Mój profil <b class="caret"></b></a>
                           <ul class="dropdown-menu">
-                              <li><a href="#">Ustawienia</a></li>
-                              <li class="divider"></li>
+                          
                               <li><%= link_to "Wyloguj", destroy_user_session_path, :method => :delete %></li>
                          </ul>
                       </li>
@@ -80,8 +75,7 @@
                  <li class="dropdown pull-right">
                          <a href="#" data-toggle="dropdown" class="dropdown-toggle">Mój profil <b class="caret"></b></a>
                           <ul class="dropdown-menu">
-                              <li><a href="#">Ustawienia</a></li>
-                              <li class="divider"></li>
+                              
                               <li><%= link_to "Wyloguj", destroy_user_session_path, :method => :delete %></li>
                          </ul>
                       </li>
