Poprawki w widoku zajec i zakonczenie sprawozdania

--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -18,6 +18,7 @@
                         <th><input type="text" class="form-control" placeholder="Dzień" disabled></th>
                         <th><input type="text" class="form-control" placeholder="Tydzień" disabled></th>
                         <th><input type="text" class="form-control" placeholder="Sala" disabled></th>
+                        <th><input type="text" class="form-control" placeholder="Miejsc" disabled></th>
                     </tr>
                 </thead>
     
