--- a/app/views/employees/new.html.erb
+++ b/app/views/employees/new.html.erb
@@ -5,8 +5,8 @@
             <div class="form-box">
             <h3> Rejestracja Pracownika </h3>
             <%= form_for :employee, url: employees_path, html: { method: :post, :class => "form-horizontal"} do |f| %>
-                    <%= f.text_field :name, placeholder: "Imię",autofocus: true %>
-                    <%= f.text_field :surname, placeholder: "Nazwisko" %>
+                    <%= f.text_field :name, placeholder: "Imię",autofocus: true, style: "text-transform: capitalize" %>
+                    <%= f.text_field :surname, placeholder: "Nazwisko",style: "text-transform: capitalize" %>
                     <%= f.text_field :degree, placeholder: "Stopień naukowy"  %>
                     <%= f.text_field :email, placeholder: "Email"  %>
                     <%= f.password_field :password,  placeholder: "Hasło" %>
