--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -9,15 +9,15 @@
 
    
         
-                <%= f.text_field :name, placeholder: "Imię" %>
+                <%= f.text_field :name, placeholder: "Imię",style: "text-transform: capitalize"  %>
            
        
             
-                <%= f.text_field :surname, placeholder: "Nazwisko" %>
+                <%= f.text_field :surname, placeholder: "Nazwisko",style: "text-transform: capitalize"  %>
             
         
             
-                <%= f.text_field :specialization, placeholder: "Spezjalizacja"  %>
+                <%= f.text_field :specialization, placeholder: "Specjalizacja" ,style: "text-transform: uppercase"   %>
           
         
         
