--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,18 +18,18 @@
                 <li><%= link_to "Zaloguj", user_session_path %></li>
                 <li><%= link_to "Rejestracja Pracownika", new_employee_path %></li>
             <% elsif controller_name == 'sessions'  %>
-                <li><%= link_to "Rejestracja Użytkownik", new_student_path %></li>
+                <li><%= link_to "Rejestracja Studenta", new_student_path %></li>
                 <li><%= link_to "Rejestracja Pracownika", new_employee_path %></li>
 
             <% elsif controller_name == 'employees'  %>
                 <li></li>
                 <li><%= link_to "Zaloguj", user_session_path %></li>
-                <li><%= link_to "Rejestracja Użytkownik", new_student_path %></li>
+                <li><%= link_to "Rejestracja Studenta", new_student_path %></li>
              
              <% elsif  controller_name == 'main_page' %>
                  <% unless user_signed_in?  %>
                   <li><%= link_to "Zaloguj", user_session_path %></li>
-                  <li><%= link_to "Rejestracja Użytkownik", new_student_path %></li>
+                  <li><%= link_to "Rejestracja Studenta", new_student_path %></li>
                   <li><%= link_to "Rejestracja Pracownika", new_employee_path %></li>
                 <% else %>
                 <% if  current_user.profile_type == 'Student'  %>
